2001-12-22 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified Cockpit:
	  - Elite-Style radar
	  - config var graphics/hud/radarType, can be WC or Elite
	  - several 'lines' that get drawn, several config vars
	

2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified Cockpit:
	  - to draw a box around all units
	    config var drawAllTargetBoxes controls that behaviour
	  - to always draw the ITTS (var drawAlwaysITTS)
	  - to use more colors on the radar/the target boxes
	

2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified configure.in
	  - added python1.5 to search for python libs
	  - fixed setting of have_boost_lib
	* modified gfx/vdu.{h,cpp} cockpit_xml.cpp
	  - messages are now displayed in the right VDU
	  - the target-vdu now displays also the FgID

	
2001-12-20 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* callbacks use now ints instead of floats
	* modules/*.c use now also ints
	

2001-12-19 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added _io.printf
	* datatype int working
	

2001-12-18 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* datatype int implemented (untested)
	* added basic python support (SCREAM!)
	

2001-12-16 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added src/cmd/script/director.cpp
	* at end-of-game, the variables are serialized to disk
	* add _string.equal, _std.equal
	

2001-12-16 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added src/cmd/script/msgcenter.{cpp,h}
	* modified src/cmd/script/Makefile.am
	* added callbacks _io.message, _io.printMsgList
	

2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>

	* added commonly used modules:
	  - faction_ships.c
	  - launch.c
	  - random.c
	  - vec3.c
	* added mission total_war1, launch_and_launch1

	
2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added _std.isNull function to test for null objects